--- a/output/method-compare.ipynb
+++ b/output/method-compare.ipynb
@@ -5,7 +5,7 @@
    "id": "22679ca3-eb88-4d84-8f1f-908e31410bd6",
    "metadata": {},
    "source": [
-    "# 1. Complementation"
+    "# Complementation"
    ]
   },
   {
